tests/whiley/invalid/test_58.wyal
type c1nat is (int x)
where:
    x > 0


type c1pnat is (c1nat x)
where:
    x > 1


assert "type invariant not satisfied":
    forall(int x):
        if:
            true
        then:
            x is c1pnat


